Change characters to supported

--- a/case-studies/immunocore/index.html
+++ b/case-studies/immunocore/index.html
@@ -33,7 +33,7 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Challenge</h3>
          <p>
-            <a href="https://www.immunocore.com/">Immunocore</a> is a $1.73 bn Nasdaq-listed company that developed the world’s first approved T cell receptor therapy (based on the ImmTAX technology).
+            <a href="https://www.immunocore.com/">Immunocore</a> is a $1.73 bn Nasdaq-listed company that developed the world's first approved T cell receptor therapy (based on the ImmTAX technology).
          </p>
          <p>
             In 2012, I was asked to build a visual science communication pack to explain how ImmTAX kills cancer cells and to mature the brand.
@@ -53,7 +53,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               Story concepts and early sketches of ImmTAX engineering co-designed with Immunocore’s science team.
+               Story concepts and early sketches of ImmTAX engineering co-designed with Immunocore's science team.
             </h4>
 
          </div>
@@ -62,12 +62,12 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Solution</h3>
          <p>
-            I designed Immunocore’s new logotype, brand manual, science communications graphics, videos, and business templates.
+            I designed Immunocore's new logotype, brand manual, science communications graphics, videos, and business templates.
          </p>
 
          <h3>The Result</h3>
          <p>
-            The logotype has been in use for over 13 years now, including appearing on the Nasdaq Tower in Times Square, NY for Immunocore’s stock exchange debut in 2021.
+            The logotype has been in use for over 13 years now, including appearing on the Nasdaq Tower in Times Square, NY for Immunocore's stock exchange debut in 2021.
          </p>
          <p>
             Science communications materials were in use for about 10 years until company's IPO.
