--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -45,8 +45,8 @@ label: case-study
             In 2016, Vivli approached with technical specs of their new data sharing platform. They needed help with two key challenges holding up their progress:
          </p>
          <ul>
-            <li>Validate Vivli’s vision with target users</li>
-            <li>Get Vivli’s consortium of partners behind this vision</li>
+            <li>Validate Vivli's vision with target users</li>
+            <li>Get Vivli's consortium of partners behind this vision</li>
          </ul>
          <p>
          </p>
@@ -103,7 +103,7 @@ label: case-study
             I validated Vivli's vision in research with experts. I used the prototype as design stimulus in conversation to help elicit feedback and action it in subsequent iterations.
          </p>
          <p>
-            With the prototype, I produced a video demo showing Vivli’s vision in tangible, realistic terms. It helped Vivli founders impress their partners and win their support.
+            With the prototype, I produced a video demo showing Vivli's vision in tangible, realistic terms. It helped Vivli founders impress their partners and win their support.
          </p>
          <p>
             Following this, Vivli became one of the top platforms for clinical trial data sharing. Today, Vivli lists 7,718 clinical studies from 55 sponsors, including major organisations in pharma and academia.
@@ -143,10 +143,10 @@ label: case-study
                <li>Submitters, who would use Vivli to add studies to the Vivli catalogue for requesters to discover and use</li>
             </ul>
             <p>
-               We used prototypes as stimulus material in expert research that we conducted with thought leaders in information sharing platforms in healthcare. We also used our prototypes with Vivli’s potential users working all over the world in various medical domains, such as: randomised clinical trials, evidence synthesis, clinical informatics, and secondary analysis.
+               We used prototypes as stimulus material in expert research that we conducted with thought leaders in information sharing platforms in healthcare. We also used our prototypes with Vivli's potential users working all over the world in various medical domains, such as: randomised clinical trials, evidence synthesis, clinical informatics, and secondary analysis.
             </p>
             <p>
-               Our findings helped us improve the prototype and refine the Vivli experience. The prototypes were also used as a tool for strengthening the Vivli consortium and communicating Vivli’s vision to stakeholders and collaborators.
+               Our findings helped us improve the prototype and refine the Vivli experience. The prototypes were also used as a tool for strengthening the Vivli consortium and communicating Vivli's vision to stakeholders and collaborators.
             </p>
             <p>
                During our research we identified the challenges a data platform such as Vivli is going to face. Below are just a few of our findings that informed design decisions.
@@ -183,10 +183,10 @@ label: case-study
                </h3>
                <img src="/img/cases/vivli/vivli-citations.png" class="shadow">
                <p>
-                  We found that academic researchers who conduct clinical trials find limited value in making their data available for secondary analysis. This is unless data sharing is rewarded in academia’s main currency — publication citations.
+                  We found that academic researchers who conduct clinical trials find limited value in making their data available for secondary analysis. This is unless data sharing is rewarded in academia's main currency — publication citations.
                </p>
                <p>
-                  To incentivise better data sharing amongst academics, we designed a mechanism for tracking data usage and citations on the submitter’s account.
+                  To incentivise better data sharing amongst academics, we designed a mechanism for tracking data usage and citations on the submitter's account.
                </p>
             </div>
 
