Minor fixes to copy and image links

--- a/case-studies/entity-explorer/index.html
+++ b/case-studies/entity-explorer/index.html
@@ -175,7 +175,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            The network visualisation was used in the BenevolentAI-AstraZeneca collaboration. AZ scientists praised its ease of use, interactive gene pathway exploration, and beautiful interface.
+            The network visualisation was used in the BenevolentAI's drug discovery collaboration with AstraZeneca. AZ scientists praised its ease of use, interactive gene pathway exploration, and engaging interface.
          </p>
       </div>
 
