--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -11,7 +11,7 @@ label: case-study
             <h3><a href="/case-studies/evinova/">{{ site.data.pages.case-study.evinova.heading }}</a></h3>
             <h4>at {{ site.data.pages.case-study.evinova.company }} &nbsp; &bull; &nbsp; {{ site.data.pages.case-study.evinova.year }}</h4>
             <p>
-               I jointly spearheaded the vision, design, and alpha-launch of Evinova's new SaaS B2B solution to solve the complexity crisis in clinical development.
+               I jointly spearheaded the vision, design, and alpha-launch of Evinova's new SaaS B2B product to solve the complexity crisis in clinical development.
             </p>
             <a href="/case-studies/evinova/" class="image-link"><img src="/img/cases/evinova/evinova-site9.png" class=""></a>
          </div>
