Minor punctuation style changes

--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -122,7 +122,7 @@ label: case-study
             <li>Sponsor teams want to reduce protocol complexity but they need a reliable way to measure it.</li>
             <li>ClinDev teams copy-paste parts of old protocols to reduce regulatory risk, not to save time drafting.</li>
             <li>The success of ClinDev-ClinOps collaboration tools depends on upstream adoption; to buy in, ClinDevs must get immediate personal value (e.g. patient burden metrics, company-vetted templates, endpoint-assessment linking).</li>
-            <li>Sponsors can gain efficiency by reducing 'white space' — the no-work and no-decision time between protocol drafting and reviews, and governance interactions (e.g. a month-long wait for a protocol review by the next Design Review Committee).</li>
+            <li>Sponsors can gain efficiency by reducing <i>white space</i> — the no-work and no-decision time between protocol drafting and reviews, and governance interactions (e.g. a month-long wait for a protocol review by the next Design Review Committee).</li>
          </ul>
       </div>
       <div class="container-one-third shift-back caption-margin">
@@ -213,7 +213,7 @@ label: case-study
             Patient experience metrics and endpoint-assessment linking help ClinDevs design patient-centric studies with only as few on-site activities as necessary, while pre-vetted templates remove the need to copy-paste. For ClinOps, real-time cost and complexity metrics help optimise trial design before changes get locked in.
          </p>
          <p>
-            Future SDP versions will deploy AI agents for protocol reviews to maximise iteration between governance points and reduce 'white space' — this will reduce cost, risk of amendments, and complexity.
+            Future SDP versions will deploy AI agents for protocol reviews to maximise iteration between governance points and reduce <i>white space</i> — this will reduce cost, risk of amendments, and complexity.
          </p>
          <p>
             Through holistic in-the-moment metrics and cross-functional collaboration, SDP gives pharma sponsors powerful tools to measure and reduce clinical trial complexity.
