Add interpretation to UMUX-Lite score

--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -229,7 +229,7 @@ label: case-study
             We launched SDP as a pilot in spring 2025 to a top-10 pharma early adopter and immediately collected excellent reviews.
          </p>
          <p>
-            AstraZeneca's summer pilot achieved CSAT 80% (average for B2B SaaS is 78%) setting a high standard in trial tech (<a href="/case-studies/merlin">Merlin's</a> CSAT ceiling was 23%). The AZ pilot also scored 63.5 for UMUX-Lite.
+            AstraZeneca's summer pilot achieved CSAT 80% (average for B2B SaaS is 78%) setting a high standard in trial tech (<a href="/case-studies/merlin">Merlin's</a> CSAT ceiling was 23%). The AZ pilot also scored 63.5 for UMUX-Lite (the higher end of the moderate range, but a good start for an MVP).
          </p>
          <p>
             SDP also created a new revenue stream for Evinova as pharma companies seek optimisation amid 2025's challenging regulatory, trade, and tech landscapes.
