--- a/case-studies/entity-explorer/index.html
+++ b/case-studies/entity-explorer/index.html
@@ -20,8 +20,7 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> In-house, B2B</h4>
-            <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.ee.company }}</h4>
-            <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.ee.year }}</h4> -->
+            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.ee.year }}</h4>
             <h4 class="caption"><b>My contributions:</b> Design leadership, Data visualisation, Qualitative research, UX design, Visual design, Design system</h4>
             <h4 class="caption"><b>Outcome:</b> Accelerated access to AI models with reduced error and bias</h4>
          </div>
