--- a/case-studies/concept2/index.html
+++ b/case-studies/concept2/index.html
@@ -104,8 +104,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/concept2/concept2-video.png" class="shadow">
-            <h5 class="secondary-annotation">Filming by Maik Kleinschmidt</h5>
+            <img src="/img/cases/concept2/concept2-video.png" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
