Minor copy change

--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -235,7 +235,7 @@ label: case-study
             SDP also created a new revenue stream for Evinova as pharma companies seek optimisation amid 2025's challenging regulatory, trade, and tech landscapes.
          </p>
          <p>
-            By autumn 2025, SDP gained multi-pharma traction, started delivering on its promise of complexity reduction, and was becoming the AI-first trial design leader.
+            By autumn 2025, SDP gained multi-pharma traction, started delivering on its promise of complexity reduction, and started becoming the AI-first trial design leader.
          </p>
       </div>
       
