Optimise image assets

--- a/case-studies/concept2/index.html
+++ b/case-studies/concept2/index.html
@@ -13,6 +13,7 @@ label: case-study
       <div class="container-two-thirds shift">
          <div class="block-margin">
             <img src="/img/cases/concept2/concept2-filming-crew.jpg" class="shadow">
+            <h5 class="secondary-annotation">Cinematography by Maik Kleinschmidt</h5>
          </div>
       </div>
 
@@ -20,8 +21,7 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project, B2B</h4>
-            <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.concept2.company }}</h4>
-            <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.concept2.year }}</h4> -->
+            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.concept2.year }}</h4>
             <h4 class="caption"><b>My contributions:</b> Content production and localisation, Instructional design, Prototyping, Project management</h4>
             <h4 class="caption"><b>Outcome:</b> Clinical trial successfully onboarded and trained patients</h4>
          </div>
@@ -34,7 +34,7 @@ label: case-study
       <div class="container-two-thirds shift">
             <h3>The Challenge</h3>
             <p>
-               It has been reported that only 40%–60% of COPD patients adhere to prescribed drug regimen, and only 1 out of 10 perform inhalation correctly (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2629978/">source</a>). Pharma companies aim to improve health outcomes by developing digital tools that support better adherence and technique.
+               It has been reported that only 40-60% of COPD patients adhere to prescribed drug regimen, and only 1 out of 10 perform inhalation correctly (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2629978/">source</a>). Pharma companies aim to improve health outcomes by developing digital tools that support better adherence and technique.
             </p>
             <p>
                In 2017, Novartis developed a smart inhaler called Concept2 that could detect the occurence and quality of inhallations. To pair with Concept2, a new patient-facing app was needed to track medication adherence, set routines, and coach COPD patients. A phase III study was planned to evaluate the benefits of Concept2.
@@ -48,7 +48,7 @@ label: case-study
          <div class="block-margin">
             <img src="/img/cases/concept2/concept2-instructions.png" class="image-gallery shadow">
             <img src="/img/cases/concept2/concept2-prototype.png" class="image-gallery shadow">
-            <img src="/img/cases/concept2/concept2-pov.png" class="image-gallery shadow">
+            <img src="/img/cases/concept2/concept2-pov.jpg" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -82,7 +82,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/concept2/concept2-script.png" class="image-gallery shadow">
+            <img src="/img/cases/concept2/concept2-script.jpg" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -105,8 +105,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/concept2/concept2-video.png" class="shadow">
-            <h5 class="secondary-annotation">Filming by Maik Kleinschmidt</h5>
+            <img src="/img/cases/concept2/concept2-video.jpg" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
