--- a/case-studies/immunocore/index.html
+++ b/case-studies/immunocore/index.html
@@ -20,8 +20,7 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project</h4>
-            <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.immunocore.company }}</h4>
-            <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.immunocore.year }}</h4> -->
+            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.immunocore.year }}</h4>
             <h4 class="caption"><b>My contributions:</b> Client leadership, Design direction, Brand design, Science communication</h4>
             <h4 class="caption"><b>Outcome:</b> Brand and science comms materials in use for over a decade (and counting)</h4>
          </div>
@@ -34,7 +33,7 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Challenge</h3>
          <p>
-            <a href="https://www.immunocore.com/">Immunocore</a> is a $1.73 bn Nasdaq-listed company that developed the world’s first approved T cell receptor therapy (based on the ImmTAX technology).
+            <a href="https://www.immunocore.com/">Immunocore</a> is a $1.73 bn Nasdaq-listed company that developed the world's first approved T cell receptor therapy (based on the ImmTAX technology).
          </p>
          <p>
             In 2012, I was asked to build a visual science communication pack to explain how ImmTAX kills cancer cells and to mature the brand.
@@ -47,15 +46,14 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-sketch-1.png" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-sketch-2.png" class="image-gallery shadow">
-            <!-- <img src="/img/cases/immunocore/immunocore-sketch-3.png" class="image-gallery shadow"> -->
+            <img src="/img/cases/immunocore/immunocore-sketch-1.jpg" class="image-gallery shadow">
+            <img src="/img/cases/immunocore/immunocore-sketch-2.jpg" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               Story concepts and early sketches of ImmTAX engineering co-designed with Immunocore’s science team.
+               Story concepts and early sketches of ImmTAX engineering co-designed with Immunocore's science team.
             </h4>
 
          </div>
@@ -64,12 +62,12 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Solution</h3>
          <p>
-            I designed Immunocore’s new logotype, brand manual, science communications graphics, videos, and business templates.
+            I designed Immunocore's new logotype, brand manual, science communications graphics, videos, and business templates.
          </p>
 
          <h3>The Result</h3>
          <p>
-            The logotype has been in use for over 13 years now, including appearing on the Nasdaq Tower in Times Square, NY for Immunocore’s stock exchange debut in 2021.
+            The logotype has been in use for over 13 years now, including appearing on the Nasdaq Tower in Times Square, NY for Immunocore's stock exchange debut in 2021.
          </p>
          <p>
             Science communications materials were in use for about 10 years until company's IPO.
@@ -77,55 +75,85 @@ label: case-study
       </div>
 
       <div class="container-two-thirds shift">
-         <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-tweet.png" class="image-gallery shadow">
+         <div class="block-margin shadow">
+               <blockquote class="twitter-tweet" data-theme="light"><p lang="en" dir="ltr">Welcome to the <a href="https://twitter.com/Nasdaq?ref_src=twsrc%5Etfw">@Nasdaq</a> family, <a href="https://twitter.com/Immunocore?ref_src=twsrc%5Etfw">@Immunocore</a>! 👏<a href="https://twitter.com/hashtag/NasdaqListed?src=hash&amp;ref_src=twsrc%5Etfw">#NasdaqListed</a>: <a href="https://twitter.com/search?q=%24IMCR&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$IMCR</a> <a href="https://t.co/fIQX8VoJqh">pic.twitter.com/fIQX8VoJqh</a></p>&mdash; Nasdaq Exchange (@NasdaqExchange) <a href="https://twitter.com/NasdaqExchange/status/1357735918396989442?ref_src=twsrc%5Etfw">February 5, 2021</a></blockquote>
+               <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
          </div>
       </div>
-
-      <div class="container-two-thirds shift">
-         <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-engineering-1.jpg" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-display.jpg" class="image-gallery shadow">
-            <!-- <img src="/img/cases/immunocore/immunocore-presentation.jpg" class="image-gallery shadow"> -->
-         </div>
-      </div>
-      <div class="container-one-third shift-back">
-         <div class="caption-margin">
-            <h4 class="caption">
-               ImmTAX engineering and antigen presentation on cell survace.
-            </h4>
-         </div>
-      </div>
-
-      <div class="container-two-thirds shift">
-         <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-killing-1.jpg" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-killing-4.jpg" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-killing-3.jpg" class="image-gallery shadow">
-         </div>
-      </div>
-      <div class="container-one-third shift-back">
-         <div class="caption-margin">
-            <h4 class="caption">
-               ImmTAX mediates in T cell killing of a cancer cell (with cytokine release).
-            </h4>
-         </div>
-      </div>
-
-      <div class="container-two-thirds shift">
-         <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-logotype-2.png" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-manual-1.png" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-manual-2.png" class="image-gallery shadow">
-         </div>
-      </div>
-      <div class="container-one-third shift-back">
-         <div class="caption-margin">
-            <h4 class="caption">
-               I designed the new Immunocore logotype in various colour versions accompanied by the brand manual defining how to use new brand assets.
-            </h4>
-         </div>
-      </div>
-
    </div>
+
+
+   {% include divider.html %}
+
+   <div class="container">
+      <h4>Appendix</h4>
+      <h2>Immunocore science communication and brand assets</h2>
+   </div>
+
+   <span class="appendix">
+      <div class="container">            
+         <div class="container-two-thirds shift">
+            <div class="block-margin">
+               <img src="/img/cases/immunocore/immunocore-engineering-1.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-engineering-2.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-display.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-presentation.jpg" class="image-gallery shadow">
+            </div>
+         </div>
+         <div class="container-one-third shift-back">
+            <div class="caption-margin">
+               <h4 class="caption">
+                  ImmTAX engineering, antigen presentation on cell survace, and cross-presentation.
+               </h4>
+            </div>
+         </div>
+
+         <div class="container-two-thirds shift">
+            <div class="block-margin">
+               <img src="/img/cases/immunocore/immunocore-killing-1.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-killing-2.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-killing-4.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-killing-3.jpg" class="image-gallery shadow">
+            </div>
+         </div>
+         <div class="container-one-third shift-back">
+            <div class="caption-margin">
+               <h4 class="caption">
+                  ImmTAX mediates in T cell killing of a cancer cell (with cytokine release).
+               </h4>
+            </div>
+         </div>
+
+         <div class="container-two-thirds shift">
+            <div class="block-margin">
+               <img src="/img/cases/immunocore/immunocore-mage-killing.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-serial-killing.jpg" class="image-gallery shadow">
+            </div>
+         </div>
+         <div class="container-one-third shift-back">
+            <div class="caption-margin">
+               <h4 class="caption">
+                  MAGE killing and serial killing or cancer cells (red) by ImmTAX-mediated T cells (blue).
+               </h4>
+            </div>
+         </div>
+
+         <div class="container-two-thirds shift">
+            <div class="block-margin">
+               <img src="/img/cases/immunocore/immunocore-logotype-2.png" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-manual-1.png" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-manual-2.png" class="image-gallery shadow">
+            </div>
+         </div>
+         <div class="container-one-third shift-back">
+            <div class="caption-margin">
+               <h4 class="caption">
+                  I designed the new Immunocore logotype in various colour versions accompanied by the brand manual defining how to use new brand assets.
+               </h4>
+            </div>
+         </div>
+
+      </div>
+   </span>
+
 </section>
