--- a/case-studies/target-triage/index.html
+++ b/case-studies/target-triage/index.html
@@ -19,7 +19,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
-            <h4 class="caption"><b>Project type:</b> In-house, B2B</h4>
+            <h4 class="caption"><b>Project type:</b> Enterprise tools, B2B</h4>
             <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.triage.company }}</h4>
             <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.triage.year }}</h4> -->
             <h4 class="caption"><b>My contributions:</b> Design leadership, Rapid prototyping, Qualitative research, Co-design, Content design, Design system</h4>
