--- a/case-studies/entity-explorer/index.html
+++ b/case-studies/entity-explorer/index.html
@@ -19,7 +19,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
-            <h4 class="caption"><b>Project type:</b> In-house, B2B</h4>
+            <h4 class="caption"><b>Project type:</b> Enterprise tools, B2B</h4>
             <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.ee.company }}</h4>
             <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.ee.year }}</h4> -->
             <h4 class="caption"><b>My contributions:</b> Design leadership, Data visualisation, Qualitative research, UX design, Visual design, Design system</h4>
@@ -175,7 +175,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            The network visualisation was used in the BenevolentAI-AstraZeneca collaboration. AZ scientists praised its ease of use, interactive gene pathway exploration, and beautiful interface.
+            The network visualisation was used in the BenevolentAI's drug discovery collaboration with AstraZeneca. AZ scientists praised its ease of use, interactive gene pathway exploration, and engaging interface.
          </p>
       </div>
 
