--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -16,7 +16,7 @@ label: case-study
                <video autoplay muted loop controls playsinline class="shadow">
                   <source src="/img/cases/vivli/vivli-for-website.webm" type="video/webm">
                   Your browser does not support the video tag.
-                  <img src="/img/cases/vivli-front.png" title="Your browser does not support the video tag" alt="Vivli prototype walkthrough">
+                  <img src="/img/cases/vivli/vivli-front.jpg" title="Your browser does not support the video tag" alt="Vivli prototype walkthrough">
                <video>
             </div>
          </div>
@@ -26,8 +26,7 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project</h4>
-            <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.vivli.company }}</h4>
-            <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.vivli.year }}</h4> -->
+            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.vivli.year }}</h4>
             <h4 class="caption"><b>My contributions:</b> Design leadership, Client leadership, UX design, Vision prototyping, Qualitative research</h4>
             <h4 class="caption"><b>Outcome:</b> Vivli successfully secured backing from consortium partners</h4>
          </div>
@@ -46,8 +45,8 @@ label: case-study
             In 2016, Vivli approached with technical specs of their new data sharing platform. They needed help with two key challenges holding up their progress:
          </p>
          <ul>
-            <li>Validate Vivli’s vision with target users</li>
-            <li>Get Vivli’s consortium of partners behind this vision</li>
+            <li>Validate Vivli's vision with target users</li>
+            <li>Get Vivli's consortium of partners behind this vision</li>
          </ul>
          <p>
          </p>
@@ -56,7 +55,7 @@ label: case-study
       <div class="container-two-thirds shift">
          <div class="block-margin">
             <img src="/img/cases/vivli/vivli-models.png" class="image-gallery shadow">
-            <img src="/img/cases/vivli/vivli-sketches.png" class="image-gallery shadow">
+            <img src="/img/cases/vivli/vivli-sketches.jpg" class="image-gallery shadow">
             <img src="/img/cases/vivli/vivli-workflow.png" class="image-gallery shadow">
          </div>
       </div>
@@ -104,7 +103,7 @@ label: case-study
             I validated Vivli's vision in research with experts. I used the prototype as design stimulus in conversation to help elicit feedback and action it in subsequent iterations.
          </p>
          <p>
-            With the prototype, I produced a video demo showing Vivli’s vision in tangible, realistic terms. It helped Vivli founders impress their partners and win their support.
+            With the prototype, I produced a video demo showing Vivli's vision in tangible, realistic terms. It helped Vivli founders impress their partners and win their support.
          </p>
          <p>
             Following this, Vivli became one of the top platforms for clinical trial data sharing. Today, Vivli lists 7,718 clinical studies from 55 sponsors, including major organisations in pharma and academia.
@@ -119,7 +118,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               Email of appreciation from Ida Sim, one of Vivli’s co-founders.
+               Email of appreciation from Ida Sim, one of Vivli co-founders.
             </h4>
          </div>
       </div>
@@ -128,7 +127,7 @@ label: case-study
    {% include divider.html %}
 
    <div class="container">
-      <h4>Appendix — Notes by the Science Practice team</h4>
+      <h4>Appendix — Notes by the Science Practice team</h4>
       <h2>Learnings from prototyping for research and collaboration</h2>
    </div>
 
@@ -144,10 +143,10 @@ label: case-study
                <li>Submitters, who would use Vivli to add studies to the Vivli catalogue for requesters to discover and use</li>
             </ul>
             <p>
-               We used prototypes as stimulus material in expert research that we conducted with thought leaders in information sharing platforms in healthcare. We also used our prototypes with Vivli’s potential users working all over the world in various medical domains, such as: randomised clinical trials, evidence synthesis, clinical informatics, and secondary analysis.
+               We used prototypes as stimulus material in expert research that we conducted with thought leaders in information sharing platforms in healthcare. We also used our prototypes with Vivli's potential users working all over the world in various medical domains, such as: randomised clinical trials, evidence synthesis, clinical informatics, and secondary analysis.
             </p>
             <p>
-               Our findings helped us improve the prototype and refine the Vivli experience. The prototypes were also used as a tool for strengthening the Vivli consortium and communicating Vivli’s vision to stakeholders and collaborators.
+               Our findings helped us improve the prototype and refine the Vivli experience. The prototypes were also used as a tool for strengthening the Vivli consortium and communicating Vivli's vision to stakeholders and collaborators.
             </p>
             <p>
                During our research we identified the challenges a data platform such as Vivli is going to face. Below are just a few of our findings that informed design decisions.
@@ -184,10 +183,10 @@ label: case-study
                </h3>
                <img src="/img/cases/vivli/vivli-citations.png" class="shadow">
                <p>
-                  We found that academic researchers who conduct clinical trials find limited value in making their data available for secondary analysis. This is unless data sharing is rewarded in academia’s main currency — publication citations.
+                  We found that academic researchers who conduct clinical trials find limited value in making their data available for secondary analysis. This is unless data sharing is rewarded in academia's main currency — publication citations.
                </p>
                <p>
-                  To incentivise better data sharing amongst academics, we designed a mechanism for tracking data usage and citations on the submitter’s account.
+                  To incentivise better data sharing amongst academics, we designed a mechanism for tracking data usage and citations on the submitter's account.
                </p>
             </div>
 
