--- a/case-studies/concept2/index.html
+++ b/case-studies/concept2/index.html
@@ -21,7 +21,7 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project, B2B</h4>
-            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.concept2.year }}</h4>
+            <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.concept2.company }}</h4>
             <h4 class="caption"><b>My contributions:</b> Content production and localisation, Instructional design, Prototyping, Project management</h4>
             <h4 class="caption"><b>Outcome:</b> Clinical trial successfully onboarded and trained patients</h4>
          </div>
