--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -85,7 +85,7 @@ label: case-study
             <h3><a href="/case-studies/immunocore/">{{ site.data.pages.case-study.immunocore.heading }}</a></h3>
             <h4>for {{ site.data.pages.case-study.immunocore.company }} &nbsp; &bull; &nbsp; {{ site.data.pages.case-study.immunocore.year }}</h4>
             <p>
-               I developed brand and science communication assets that Immunocore (NASDAQ: <a href="https://www.nasdaq.com/market-activity/stocks/imcr">IMCR</a>) has been now using for over a decade.
+               I developed the brand and science communication assets that Immunocore (NASDAQ: <a href="https://www.nasdaq.com/market-activity/stocks/imcr">IMCR</a>) has been using for over a decade.
             </p>
             <a href="/case-studies/immunocore/" class="image-link"><img src="/img/cases/immunocore/immunocore-front.jpg" class="shadow"></a>
          </div>
