Update assets in case studies

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -12,7 +12,7 @@ label: case-study
             <p>
                I jointly spearheaded the vision, design, and alpha-launch of Evinova's new SaaS B2B product to solve the complexity crisis in clinical development.
             </p>
-            <a href="/case-studies/evinova/" class="image-link"><img src="/img/cases/evinova/evinova-site9.png" class=""></a>
+            <a href="/case-studies/evinova/" class="image-link"><img src="/img/cases/evinova/evinova-site9.png" class="shadow"></a>
          </div>
 
 
