--- a/case-studies/merlin/index.html
+++ b/case-studies/merlin/index.html
@@ -56,7 +56,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/merlin/merlin-performance.png" class="shadow">
+            <img src="/img/cases/merlin/merlin-performance.jpg" class="shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -84,7 +84,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/merlin/merlin-interview.png" class="shadow">
+            <img src="/img/cases/merlin/merlin-interview.jpg" class="shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -116,6 +116,7 @@ label: case-study
       <div class="container-two-thirds shift">
          <div class="block-margin">
             <img src="/img/cases/merlin/merlin1.png" class="image-gallery shadow">
+            <img src="/img/cases/merlin/merlin3.png" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
