--- a/influences/index.html
+++ b/influences/index.html
@@ -92,7 +92,7 @@ label: influences
       </div>
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/influences/senelnikov.jpg">
+            <img src="/img/influences/senelnikov.jpg" class="shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
