Minor content changes and updates

--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -115,7 +115,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            Through our research, we learnt that:
+            Through our research, I learnt that:
          </p>
          <ul>
             <li>Sponsor teams want to reduce protocol complexity but they need a reliable way to measure it.</li>
