--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -62,7 +62,7 @@ label: cases
             <h3><a href="/case-studies/vivli/">{{ site.data.pages.case-study.vivli.heading }}</a></h3>
             <h4>at {{ site.data.pages.case-study.vivli.company }} &nbsp; &bull; &nbsp; {{ site.data.pages.case-study.vivli.year }}</h4>
             <p>
-               I helped advance Vivli's vision of a clinical trial data sharing platform from technical specs to a tangible experience, securing the backing of Vivli's consortium of partners.
+               I helped advance Vivli's vision of a clinical trial data sharing platform from technical specs to a tangible experience in 6 weeks, leading to securing the backing of Vivli's consortium of partners.
             </p>
             <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/vivli/vivli-front.jpg" class="shadow"></a>
         </div>
