--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -28,7 +28,7 @@ label: case-study
             <h4 class="caption"><b>Project type:</b> Client project</h4>
             <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.vivli.company }}</h4>
             <h4 class="caption"><b>My contributions:</b> Design leadership, Client leadership, UX design, Vision prototyping, Qualitative research</h4>
-            <h4 class="caption"><b>Outcome:</b> Vivli successfully secured backing from consortium partners</h4>
+            <h4 class="caption"><b>Outcome:</b> Vision validated in 6 weeks, Vivli successfully secured backing from consortium partners</h4>
          </div>
       </div>
    </div>
@@ -42,10 +42,10 @@ label: case-study
             Vivli is a global non-profit on a mission to maximise the use and access to clinical trial data for the benefit of the wider biomedical R&amp;D community.
          </p>
          <p>
-            In 2016, Vivli approached with technical specs of their new data sharing platform. They needed help with two key challenges holding up their progress:
+            In 2016, Vivli approached us with technical specs of their new data sharing platform. They needed help with two key challenges holding up their progress:
          </p>
          <ul>
-            <li>Validate Vivli's vision with target users</li>
+            <li>Validate Vivli's vision with target users, quickly</li>
             <li>Get Vivli's consortium of partners behind this vision</li>
          </ul>
          <p>
@@ -73,10 +73,10 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>My Approach</h3>
          <p>
-            To address both challenged, I worked with Vivli founders to translate their technical specification into a tangible design proposal delivered as a clickable prototype.
+            To address both challenges, I worked with Vivli founders to translate their technical specification into a tangible design proposal delivered as a clickable prototype.
          </p>
          <p>
-            I then used the prototype to validate the product and communicate its vision and value to stakeholders.
+            I then used the prototype to validate the product, and communicate Vivli's vision and value to stakeholders. Everything done in 6 weeks.
          </p>
       </div>
 
@@ -100,13 +100,13 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Result</h3>
          <p>
-            I validated Vivli's vision in research with experts. I used the prototype as design stimulus in conversation to help elicit feedback and action it in subsequent iterations.
+            I validated Vivli's vision in research with potential users and subject matter experts. I used the prototype as stimulus in conversation to elicit feedback and action it in subsequent iterations.
          </p>
          <p>
             With the prototype, I produced a video demo showing Vivli's vision in tangible, realistic terms. It helped Vivli founders impress their partners and win their support.
          </p>
          <p>
-            Following this, Vivli became one of the top platforms for clinical trial data sharing. Today, Vivli lists 7,718 clinical studies from 55 sponsors, including major organisations in pharma and academia.
+            Following this, Vivli became one of the top platforms for clinical trial data sharing. Today, Vivli lists 7,769 clinical studies from 56 sponsors, including major organisations in pharma and academia.
          </p>
       </div>
 
