--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ label: home
             I grow design teams, mentor emerging talent, and coach individuals to thrive. I've helped organisations scale scientific discovery, capture commercial opportunities, and harness AI capabilities — all through thoughtful, evidence-driven design.
          </p>
          <p>
-            I believe in Tech for Good. I work with like-minded tech leaders to shape new products that deliver a positive impact on the world.
+            I believe in tech for good. I work with like-minded tech leaders to shape new products that deliver a positive impact on the world.
          </p>
       </div>
    </div>
