--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@ label: contact
 ---
 <section>
    <div class="container">
-      <div class="container-two-third shift">
+      <div class="container-two-thirds shift">
          <ol>
             <li>Email: <a href="mailto:{{ site.data.mk.email }}@gmail.com">{{ site.data.mk.email }}@gmail.com</a></li>
             <li>LinkedIn: <a href="https://linkedin.com/in/marek-kultys/">{{ site.data.mk.author }}</a></li>
