Remove hero image duplication

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@ label: home
 <section>
    <div class="container">
       <div class="container-one-third">
-         <img src="/img/voyager-alpha3.png" class="banner-for-desktop"/>
+         <img src="/img/voyager-alpha3.png" class="banner"/>
       </div>
       <div class="container-two-thirds">
-         <img src="/img/voyager-alpha3.png" class="banner-for-mobile"/>
          <p>
             With design, I connect humans to tech. I build intuitive interfaces that give experts access to complex data, AI models, and analytics tools — helping users make better, faster decisions, confidently.
          </p>
